--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
+    "@gradio/client": "^1.2.1",
     "ant-design-vue": "^3.2.20",
     "crypto-js": "^4.1.1",
     "fabric": "^5.3.0",
